--- a/AziendaIBM/pom.xml
+++ b/AziendaIBM/pom.xml
@@ -54,7 +54,13 @@
     <artifactId>javax.servlet.jsp.jstl-api</artifactId>
     <version>1.2.1</version>
 </dependency>
-        
+
+<dependency>
+   <groupId>net.sf.jasperreports</groupId>
+   <artifactId>jasperreports</artifactId>
+   <version>6.1.0</version>
+	</dependency>
+
   </dependencies>
   <build>
     <finalName>AziendaIBM</finalName>
